Fixed burger menu on mobile, made favorite button static in saved routes

--- a/styles/blocks/header/header.css
+++ b/styles/blocks/header/header.css
@@ -99,6 +99,8 @@
   padding: 0;
   z-index: 1001;
   position: relative;
+  touch-action: manipulation;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .header__menu-icon {
